@@ -7,6 +7,8 @@ hw-detect (1.28) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Rename /etc/network/devnames.gz to /etc/network/devnames-static.gz to
     avoid confusion with /etc/network/devnames (closes: #340919).
+  * Consider HOTPLUG_TYPE as udev if the hotplug handler is empty (i.e.
+    udevd is listening for events on a netlink socket).
 
  -- Frans Pop <fjp@debian.org>  Sun, 27 Nov 2005 17:24:41 +0100
 
